[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["John <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^1.12.1"
diffusers = "^0.2.4"
transformers = "^4.21.2"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
